
	* lisp/sawfish/wm/match-window.jl: replace never-expose by never-tile

	* lisp/sawfish/wm/tile/utils.jl: add window-never-expose-p

	* lisp/sawfish/wm/tile/cols.jl: add increase-max-cols, decrease-max-cols,
	  minor fixups in col-tiler

	* lisp/sawfish/wm/tile/tile.jl: export increase-max-cols, decrease-max-cols,
	  window-never-expose-p

	* README: fixed my mail address

	* configure.in: small capitalization string-change

	* man/news.texi: update + changed tiling example.

	* lisp/sawfish/wm/tile/readme.org: update

2013-03-21  Robert Zenz <Bobby@bonsaimind.org>
	* themes/mxflat/theme.jl: Fixed $height-content and
	$width-content not being replaced in title.

2013-01-12  Christopher Roy Bratusek <nano@tuxfamily.org>
	* debian/changelog: update

	* debian/control: add dh-autoreconf as dependency

2012-12-01  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/tile/utils.jl: don't tile non-default windows

2012-11-27  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/tile/utils.jl: make tall-tiler support inexact
	values for master-window-width by making push-window failsafe

2012-11-26  Christopher Roy Bratusek <nano@tuxfamily.org>
	* src/windows.c: cap max-width / max-height of a window, if it exceeds
	32767 (X11 maximum) -- fixes odd window-behaviour with Firefox 17
	(original patch by Michael Panteleit)

	* lisp/sawfish/wm/tile/tile.jl
	* lisp/sawfish/wm/tile/col.jl
	* lisp/sawfish/wm/tile/tiler.jl
	* lisp/sawfish/wm/tile/utils.jl
	* lisp/sawfish/wm/tile/tall.jl: moved tiling from next-lisp/ into
	main-tree. Some minor fixups. Don't tile windows that are marked,
	ignored, dock, never-expose or are invisible. Original code: Jose A.
	Ortega Ruiz, modifications: Christopher Roy Bratusek

2012-11-03  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/util/keymap.jl: Revert "read-event now grabs pointer
	instead of keyboard." -- fixes grabbing keys doesn't always work

	* configure.in