@@ -18,6 +18,9 @@
 	* lisp/sawfish/wm/tile/tile.jl: export increase-max-cols, decrease-max-cols,
 	  window-never-expose-p
 
+	* lisp/sawfish/wm/tile/tall.jl: don't error in tall-rotate-left and
+	  tall-rotate-right if there are not enough windows for rotation
+
 	* README: fixed my mail address
 
 	* configure.in: small capitalization string-change
